RESOLVED FIXED256270
REGRESSION(262909@main): [ iOS ] TestWebKitAPI.WebKit.LockdownModeDefaultFirstUseMessage is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=256270
Summary REGRESSION(262909@main): [ iOS ] TestWebKitAPI.WebKit.LockdownModeDefaultFirs...
Robert Jenner
Reported 2023-05-03 14:13:02 PDT
TestWebKitAPI.WebKit.LockdownModeDefaultFirstUseMessage is a flaky crash on iOS. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.LockdownModeDefaultFirstUseMessage CRASH STDOUT: TestWebKitAPI.WebKit.LockdownModeDefaultFirstUseMessage Child process terminated with signal 11: Segmentation fault
Attachments
crash log (219.81 KB, text/plain)
2023-05-03 16:16 PDT, Ryan Haddad
no flags
Radar WebKit Bug Importer
Comment 1 2023-05-03 14:29:44 PDT
Robert Jenner
Comment 2 2023-05-03 14:30:51 PDT
I was able to reproduce the crash at iOS 16 Debug ToT running the test as follows: run-api-tests TestWebKitAPI.WebKit.LockdownModeDefaultFirstUseMessage --iterations 100
Robert Jenner
Comment 3 2023-05-03 14:52:54 PDT
I believe I was able to bisect to a specific regression point, but I am still confirming. However, so far it appears that https://commits.webkit.org/262909@main may have caused this to occur. I have been able to successfully reproduce the Segmentation fault crash mentioned above at 262909@main, but I was not able to reproduce it at 262908@main. I'm going to run the test in a few more iterations, just to confirm.
Robert Jenner
Comment 4 2023-05-03 15:03:27 PDT
https://commits.webkit.org/262909@main does appear to have changes in it that impact lockdown mode, and since this is a lock down mode test, I believe that is the cause for this. Also, I wasn't able to reproduce the crash at 262908@main, so it does
Ryan Haddad
Comment 5 2023-05-03 16:16:45 PDT
Created attachment 466199 [details] crash log
youenn fablet
Comment 6 2023-05-09 00:20:23 PDT
*** Bug 256513 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 7 2023-05-09 00:33:15 PDT
EWS
Comment 8 2023-05-09 08:09:12 PDT
Committed 263865@main (83e11a3a6c03): <https://commits.webkit.org/263865@main> Reviewed commits have been landed. Closing PR #13631 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.