REGRESSION(262909@main): [ iOS ] TestWebKitAPI.WebKit.LockdownModeDefaultFirstUseMessage is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=256270 rdar://problem/108860966

Reviewed by Eric Carlson.

[UIAlertController alertControllerWithTitle:message:preferredStyle:] should not be adopted since it is autoreleased.
Remove adoptNS from call site.

* Source/WebKit/UIProcess/ios/UIAlertControllerUtilities.mm:
(WebKit::createUIAlertController):

Canonical link: https://commits.webkit.org/263865@main